# Recorder

./: .gitignore  .gitmodules  Android Studio.txt  Android.txt  CMakeLists.txt  Docker.txt  JavaScript.txt  Numpy.txt  Windows上判断lib为32或64位.txt  bookmarks_2018_10_19.html  bookmarks_2018_9_25.html  bookmarks_2019_1_8.html  bookmarks_2019_3_27.html  bookmarks_2019_4_3.html  bookmarks_2019_8_26.html  bookmarks_2019_9_1.html  bookmarks_2020_5_7.html  使用github.txt  注册表修改右键内容.txt  添加System引用集.txt  管道通信.txt  路由器桥接.txt
C & C++/: C++ Coding Style.pptx  CMake.txt  Link.txt  SSE.txt  class相关.txt  stl.txt  stl相关.txt  内存管理.txt  多线程.txt  编译&链接.txt  编译&链接流程.txt  面向对象.txt
Chrome 书签/: bookmarks_2016_7_20.html  bookmarks_2016_7_29.html  bookmarks_2017_10_21.html  bookmarks_2017_12_20.html  bookmarks_2017_12_8.html  bookmarks_2017_1_10.html  bookmarks_2017_1_11.html  bookmarks_2017_7_13.html  bookmarks_2017_7_21.html  bookmarks_2017_9_18.html  bookmarks_2017_9_30.html  bookmarks_2018_3_17.html  bookmarks_2018_6_15.html  bookmarks_3_27_17.html
Deep Learning/: Caffe数据结构.txt  Cntk Python PAI.txt  CntkToCaffe.txt  Cntk与Caffe的矩阵运算库.txt  Cntk数据结构.txt  Cntk训练.txt  MKLDNN.txt  OpenBlas.txt  mmdnn.txt  新环境.txt
Git/: Github.txt  Github配置.txt  Problem.txt  branch.txt  commit.txt  fork项目同步.txt  使用git.txt  基本.txt  权限.txt  添加配置.txt  问题.txt
Linux/: Linux - Debug.txt  Linux - Others.txt  Linux - ssh.txt  Others.txt  Users.txt  apt-get.txt  gcc.txt  ssh.txt
MSRA/: CoreLib.txt  cntk_model.txt  mobile.txt  nuget相关.txt
Mobile/: Andoird.txt
Others/: EFL密码失效.txt  使用Fuel安装Openstark.txt  导出日记.txt  父母密码.txt  狼人杀胜率.xlsx
Python/: Numpy.txt  conda.txt  module相关.txt  py.exe相关.txt  python包发布.txt  python包相关.txt  python环境.txt  优化技巧.txt  加密相关.txt
Visual Studio/: Cmake 创建 sln.txt  Debug & Test.txt  Setting相关Error.txt  Visual Studio项目兼容.txt  WSL.txt  (+6 more)
(+28 files in other folders)
